--- a/.github/workflows/build-kernel-drax.yml
+++ b/.github/workflows/build-kernel-drax.yml
@@ -24,7 +24,6 @@ jobs:
         include:
           - arch: x86_64
             kernel_image_name: bzImage
-            build_config: build.config.gki.x86_64
             defconfig: x86_64_defconfig
 
     name: Build ChromeOS DRAX kernel
@@ -68,7 +67,7 @@ jobs:
           fetch-depth: 0
 
       - name: Setup kernel source
-        run: git clone https://chromium.googlesource.com/chromiumos/third_party/kernel.git -b ${{ env.git_tag }} --depth=1
+        run: git clone https://github.com/openFyde/kernel.git -b ${{ env.git_tag }} --depth=1
 
       - name: Extract version from Makefile
         working-directory: kernel
